# Kurai

./: Cargo.toml  README.md  exec  exec.ll  install.sh  justfile  print.kurai
kurai/: Cargo.toml  exec
kurai/src/: main.rs
kurai_ast/: Cargo.toml
kurai_ast/src/: expr.rs  stmt.rs  typedArg.rs
kurai_attr/: Cargo.toml
kurai_attr/src/: attribute.rs
kurai_binop/: Cargo.toml
kurai_binop/src/: bin_op.rs
kurai_codegen/: Cargo.toml
kurai_codegen/src/: lib.rs
kurai_codegen/src/codegen/: build_conditional_branch.rs  codegen.rs  execute_every_expr_in_code.rs  execute_every_stmt_in_code.rs  lower_expr_to_llvm.rs  mod.rs  value.rs
kurai_codegen/src/codegen/passes/: build_conditional_branch.rs  execute_every_expr_in_code.rs  execute_every_stmt_in_code.rs  lower_expr_to_llvm.rs  mod.rs  utils.rs
kurai_codegen/src/registry/: registry.rs
kurai_codegen_traits/: Cargo.toml
kurai_codegen_traits/src/: codegen_print.rs  lib.rs
kurai_core/: Cargo.toml
kurai_core/src/: lib.rs  scope.rs  typedArg.rs  utils.rs  value.rs
kurai_core/src/parse/: instr.rs  mod.rs  parse.rs  parse_fn_call.rs  parse_if_else.rs  stmt.rs
kurai_core/src/parse/parse_expr/: mod.rs  parse_equal.rs
kurai_core/src/parse/parse_import/: mod.rs  parse_import_decl.rs  parse_imported_file.rs
kurai_error/: Cargo.toml
kurai_error/src/: error.rs  error_kind.rs  span.rs
kurai_expr/: Cargo.toml
kurai_expr/src/: expr.rs
kurai_item/: Cargo.toml
kurai_item/src/: item.rs
kurai_parser/: Cargo.toml
kurai_parser/src/: lib.rs
kurai_parser/src/parse/: mod.rs  parse.rs  parse_block.rs  parse_fn_call.rs  parse_fn_decl.rs  parse_if_else.rs  parse_return.rs  parse_stmt.rs  parse_var_assign.rs  parse_var_decl.rs
kurai_parser/src/parse/parse_expr/: mod.rs  parse_arithmetic.rs  parse_equal.rs
kurai_parser/src/parse/parse_function/: mod.rs  parse_attrs.rs  parse_fn_call.rs  parse_fn_decl.rs
kurai_parser/src/parse/parse_import/: parse_import_decl.rs  parse_imported_file.rs
kurai_parser/src/parse/parse_loop/: mod.rs  parse_for_loop.rs  parse_loop.rs  parse_while_loop.rs
kurai_parser/src/parse/utils/: expr_to_value.rs  mod.rs
kurai_parser_function/: Cargo.toml
kurai_parser_function/src/: lib.rs  parse_attrs.rs  parse_fn_call.rs  parse_fn_decl.rs
kurai_parser_import_decl/: Cargo.toml
kurai_parser_import_decl/src/: lib.rs  parse_import_decl.rs
kurai_parser_import_file/: Cargo.toml
kurai_parser_import_file/src/: lib.rs  parse_imported_file.rs
kurai_parser_loop/: Cargo.toml
kurai_parser_loop/src/: lib.rs  parse_for_loop.rs  parse_loop.rs  parse_while_loop.rs
kurai_parser_stmt/: Cargo.toml
kurai_parser_stmt/src/: lib.rs  parse_stmt.rs
kurai_stdlib/: Cargo.toml  print.kurai
kurai_stdlib/src/: print.rs
kurai_stmt/: Cargo.toml
kurai_stmt/src/: stmt.rs
kurai_token/: Cargo.toml
kurai_token/src/: eat_stmt.rs
kurai_token/src/token/: spanned_token.rs  token.rs
kurai_typedArg/: Cargo.toml
kurai_typedArg/src/: lib.rs  typedArg.rs
kurai_types/: Cargo.toml
kurai_types/src/: typ.rs  value.rs
kuraic/: Cargo.toml  exec.ll
kuraic/src/: main.rs
src/: eat.rs  eat_stmt.rs  exec  exec.ll  lib.rs  main.rs  scope.rs  typedArg.rs  value.rs
src/codegen/: codegen.rs  execute_every_expr_in_code.rs  execute_every_stmt_in_code.rs  mod.rs  value.rs
src/parse/: bin_op.rs  expr.rs  instr.rs  mod.rs  parse.rs  parse_block.rs  parse_fn_call.rs  parse_fn_decl.rs  parse_if_else.rs  parse_import.rs  parse_var_assign.rs  parse_var_decl.rs  stmt.rs
src/parse/parse_expr/: parse_equal.rs
src/parse/parse_import/: parse_import_decl.rs
src/stdlib/: print.rs
src/token/: token.rs
stdlib/: Cargo.toml
stdlib/src/: print.rs
tests/: print_i_love_sara.rs  test_if_else.rs  test_token_generation.rs
vyn_ast/: Cargo.toml
vyn_ast/src/: expr.rs  lib.rs  stmt.rs  typedArg.rs
vyn_attr/: Cargo.toml
vyn_attr/src/: attribute.rs
vyn_binop/: Cargo.toml
vyn_binop/src/: lib.rs
vyn_codegen/: Cargo.toml
vyn_codegen/src/: lib.rs
vyn_codegen/src/codegen/: mod.rs  value.rs
vyn_codegen/src/codegen/passes/: build_conditional_branch.rs  execute_every_stmt_in_code.rs  lower_expr_to_llvm.rs  mod.rs  utils.rs
vyn_codegen/src/registry/: registry.rs
vyn_codegen_traits/: Cargo.toml
vyn_core/: Cargo.toml
vyn_core/src/: scope.rs
vyn_error/: Cargo.toml
vyn_error/src/: error.rs  error_kind.rs  lib.rs  span.rs
vyn_expr/: Cargo.toml
vyn_parser/: Cargo.toml
vyn_parser/src/: lib.rs
vyn_parser/src/parse/: instr.rs  mod.rs  parse.rs  parse_block.rs  parse_if_else.rs  parse_return.rs  parse_stmt.rs  parse_var_assign.rs  parse_var_decl.rs
vyn_parser/src/parse/parse_expr/: parse_arithmetic.rs  parse_equal.rs
vyn_parser/src/parse/parse_function/: parse_attrs.rs  parse_fn_call.rs  parse_fn_decl.rs
vyn_parser/src/parse/parse_import/: mod.rs  parse_import_decl.rs  parse_imported_file.rs
vyn_parser/src/parse/parse_loop/: parse_for_loop.rs  parse_loop.rs  parse_while_loop.rs
vyn_parser/src/parse/utils/: expr_to_value.rs
vyn_parser_function/: Cargo.toml
vyn_parser_function/src/: lib.rs
vyn_parser_import_decl/: Cargo.toml
vyn_parser_import_decl/src/: lib.rs
vyn_parser_import_file/: Cargo.toml
vyn_parser_loop/: Cargo.toml
vyn_parser_loop/src/: lib.rs
vyn_stdlib/: Cargo.toml
vyn_stdlib/src/: print.rs
vyn_stmt/: Cargo.toml
vyn_stmt/src/: stmt.rs
vyn_token/: Cargo.toml
vyn_token/src/: eat_stmt.rs  lib.rs
vyn_token/src/token/: mod.rs  token.rs
vyn_typedArg/: Cargo.toml
vyn_typed_arg/: Cargo.toml
vyn_types/: Cargo.toml
vyn_types/src/: lib.rs  typ.rs
vync/: Cargo.toml
vync/src/: main.rs
