[workspace]
members = [
  "kurai",
  "kurai_core",
  "kurai_codegen",
  "kurai_stdlib",
  "kurai_types",
  "kurai_stmt",
  "kurai_expr",
  "kurai_typedArg",
  "kurai_codegen_traits",
  "kurai_parser",
  "kurai_token",
  "kurai_parser_import_file",
  "kurai_parser_import_decl",
  "kurai_parser_stmt",
]

# [dependencies]
# colored = "3.0.0"
# inkwell = { version = "0.5.0", features = ["llvm18-0"] }
# once_cell = "1.21.3"
