[workspace]
members = [
  "vync",
  "vyn_core",
  "vyn_codegen",
  "vyn_stdlib",
  "vyn_types",
  "vyn_stmt",
  "vyn_expr",
  "vyn_typedArg",
  "vyn_parser",
  "vyn_token",
  "vyn_parser_import_file",
  "vyn_parser_import_decl",
  "vyn_parser_function",
  "vyn_parser_loop",
  "vyn_attr",
  "vyn_ast",
  "vyn_error",
]

# [dependencies]
# colored = "3.0.0"
# inkwell = { version = "0.5.0", features = ["llvm18-0"] }
# once_cell = "1.21.3"
