[package]
name = "kurai"
version = "0.2.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"]}
kurai_codegen = { version = "0.2.0", path = "../kurai_codegen" }
kurai_core = { version = "0.2.0", path = "../kurai_core" }
kurai_parser = { version = "0.2.0", path = "../kurai_parser" }
kurai_stdlib = { version = "0.2.0", path = "../kurai_stdlib" }
kurai_token = { version = "0.2.0", path = "../kurai_token" }
