[package]
name = "kurai_parser_function"
version = "0.3.0"
edition = "2024"

[dependencies]
kurai_expr = { version = "0.3.0", path = "../kurai_expr" }
kurai_parser = { version = "0.3.0", path = "../kurai_parser" }
kurai_stmt = { version = "0.3.0", path = "../kurai_stmt" }
kurai_token = { version = "0.3.0", path = "../kurai_token" }
kurai_typedArg = { version = "0.3.0", path = "../kurai_typedArg" }
kurai_types = { version = "0.3.0", path = "../kurai_types" }
