[package]
name = "kurai_parser_function"
version = "0.4.1"
edition = "2024"

[dependencies]
kurai_attr = { version = "0.4.1", path = "../kurai_attr" }
kurai_core = { version = "0.4.1", path = "../kurai_core" }
kurai_expr = { version = "0.4.1", path = "../kurai_expr" }
kurai_parser = { version = "0.4.1", path = "../kurai_parser" }
kurai_stmt = { version = "0.4.1", path = "../kurai_stmt" }
kurai_token = { version = "0.4.1", path = "../kurai_token" }
kurai_typedArg = { version = "0.4.1", path = "../kurai_typedArg" }
kurai_types = { version = "0.4.1", path = "../kurai_types" }
