[package]
name = "kurai_parser_function"
version = "0.4.9"
edition = "2024"

[dependencies]
colored = "3.0.0"
kurai_ast = { version = "0.4.9", path = "../kurai_ast" }
kurai_attr = { version = "0.4.9", path = "../kurai_attr" }
kurai_core = { version = "0.4.9", path = "../kurai_core" }
kurai_expr = { version = "0.4.9", path = "../kurai_expr" }
kurai_parser = { version = "0.4.9", path = "../kurai_parser" }
kurai_stmt = { version = "0.4.9", path = "../kurai_stmt" }
kurai_token = { version = "0.4.9", path = "../kurai_token" }
kurai_typedArg = { version = "0.4.9", path = "../kurai_typedArg" }
kurai_types = { version = "0.4.9", path = "../kurai_types" }
