[package]
name = "kurai_parser_import_decl"
version = "0.2.0"
edition = "2024"

[dependencies]
kurai_parser = { version = "0.2.0", path = "../kurai_parser" }
kurai_stmt = { version = "0.2.0", path = "../kurai_stmt" }
kurai_token = { version = "0.2.0", path = "../kurai_token" }
kurai_typedArg = { version = "0.2.0", path = "../kurai_typedArg" }
kurai_types = { version = "0.2.0", path = "../kurai_types" }
