[package]
name = "kurai_parser_import_file"
version = "0.4.0"
edition = "2024"

[dependencies]
kurai_core = { version = "0.4.0", path = "../kurai_core" }
kurai_parser = { version = "0.4.0", path = "../kurai_parser" }
kurai_stmt = { version = "0.4.0", path = "../kurai_stmt" }
kurai_token = { version = "0.4.0", path = "../kurai_token" }
