[package]
name = "kurai_stmt"
version = "0.4.9"
edition = "2024"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
kurai_types = { version = "0.4.9", path = "../kurai_types/"}
kurai_expr = { version = "0.4.9", path = "../kurai_expr/"}
kurai_typedArg = { version = "0.4.9", path = "../kurai_typedArg/"}
kurai_attr = { version = "0.4.9", path = "../kurai_attr" }
kurai_ast = { version = "0.4.9", path = "../kurai_ast" }
