[package]
name = "vyn_parser"
version = "0.4.9"
edition = "2024"

[dependencies]
vyn_binop = { version = "0.4.9", path = "../vyn_binop" }
vyn_expr = { version = "0.4.9", path = "../vyn_expr" }
vyn_token = { version = "0.4.9", path = "../vyn_token/" }
vyn_stmt = { version = "0.4.9", path = "../vyn_stmt/" }
vyn_types = { version = "0.4.9", path = "../vyn_types/" }
vyn_typedArg = { version = "0.4.9", path = "../vyn_typedArg/" }
vyn_core = { version = "0.4.9", path = "../vyn_core" }
colored = "3.0.0"
vyn_attr = { version = "0.4.9", path = "../vyn_attr" }
vyn_ast = { version = "0.4.9", path = "../vyn_ast" }
vyn_error = { version = "0.4.9", path = "../vyn_error" }
# vyn_parser_stmt = { version = "0.4.9", path = "../vyn_parser_stmt" }
# vyn_codegen = { version = "0.4.9", path = "../vyn_codegen/" }
