[package]
name = "vyn_parser_function"
version = "0.4.9"
edition = "2024"

[dependencies]
colored = "3.0.0"
vyn_ast = { version = "0.4.9", path = "../vyn_ast" }
vyn_attr = { version = "0.4.9", path = "../vyn_attr" }
vyn_core = { version = "0.4.9", path = "../vyn_core" }
vyn_expr = { version = "0.4.9", path = "../vyn_expr" }
vyn_parser = { version = "0.4.9", path = "../vyn_parser" }
vyn_stmt = { version = "0.4.9", path = "../vyn_stmt" }
vyn_token = { version = "0.4.9", path = "../vyn_token" }
vyn_typedArg = { version = "0.4.9", path = "../vyn_typedArg" }
vyn_types = { version = "0.4.9", path = "../vyn_types" }
