[package]
name = "vyn_stdlib"
version = "0.4.9"
edition = "2024"

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
vyn_codegen = { version = "0.4.9", path = "../vyn_codegen" }
vyn_codegen_traits = { version = "0.4.9", path = "../vyn_codegen_traits" }
vyn_core = { version = "0.4.9", path = "../vyn_core" }
vyn_expr = { version = "0.4.9", path = "../vyn_expr" }
vyn_stmt = { version = "0.4.9", path = "../vyn_stmt" }
vyn_typed_arg = { version = "0.4.9", path = "../vyn_typed_arg/" }
vyn_types = { version = "0.4.9", path = "../vyn_types" }
